--- a/Hangman/HangmanGame.csproj
+++ b/Hangman/HangmanGame.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hangman.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="IConsole.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
